--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".title.TitleActivity">
+    tools:context=".stage.title.TitleActivity">
 
     <TextView
         android:layout_width="wrap_content"
