--- a/app/src/main/res/drawable/btn_main_normal.xml
+++ b/app/src/main/res/drawable/btn_main_normal.xml
@@ -1,4 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="#000000">
+    <!--点击按下-->
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <!--圆角半径-->
+            <corners android:radius="8dp"/>
+            <!--背景色-->
+            <solid android:color="@color/colorAccent"/>
+        </shape>
+    </item>
+    <item android:state_focused="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="8dp"/>
+            <solid android:color="@color/colorAccent"/>
+        </shape>
+    </item>
+    <!--一般状态-->
+    <item>
+        <shape android:shape="rectangle">
+            <corners android:radius="8dp"/>
+            <solid android:color="@color/colorPrimaryDark"/>
+        </shape>
+    </item>
 
-</selector>
+</ripple>
