--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary">
 
+    <cn.saltedfish.saltedcdd.stage.gameplay.GameView
+        android:id="@+id/gameView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageButton
         android:id="@+id/button_pauseGame"
         android:layout_width="60dp"
@@ -22,7 +31,7 @@
         android:id="@+id/layout_menu"
         android:layout_width="738dp"
         android:layout_height="421dp"
-        android:background="#32000000"
+        android:background="@color/colorPrimary"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,4 +76,6 @@
             app:layout_constraintTop_toTopOf="@+id/button_refreshGame"
             app:srcCompat="@drawable/icon_continue" />
     </android.support.constraint.ConstraintLayout>
+
+
 </android.support.constraint.ConstraintLayout>
