--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -20,12 +20,14 @@
         android:id="@+id/button_gameEndToHome"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="230dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/btn_main_normal"
         android:scaleType="centerInside"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_gameEndToRefresh"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/icon_home" />
 
@@ -33,7 +35,7 @@
         android:id="@+id/button_gameEndToRefresh"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginEnd="230dp"
+        android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/btn_main_normal"
         android:padding="7dp"
@@ -41,6 +43,7 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button_gameEndToHome"
         app:srcCompat="@drawable/icon_refresh" />
 
     <ImageButton
